laravel-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: laravel-service
  namespace: laravel
spec:
  selector:
    app: laravel-app
  ports:
    - port: 80
      targetPort: 80
  type: ClusterIP
